--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
             <a href="project/index.html">Project</a>
         </li>
         <li>
-            <a href="assignment/index.html">Assignment</a>
+            <a href="assignment/login.html">Assignment</a>
         </li>
         <li>
             <a href="test/index.html">Test MongoDB</a>
         </li>
         <li>
-            <a href="https://github.com/jannunzi/web-dev-template">Your public repository at GitHub.com</a>
+            <a href="https://github.com/vikash4281/peddinti-prasannavikash-webdev">Your public repository at GitHub.com</a>
         </li>
     </ul>
 </body>
