--- a/public/assignment/widget-heading.html
+++ b/public/assignment/widget-heading.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <title>Profile</title>
