--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <a href="project/index.html">Project</a>
         </li>
         <li>
-            <a href="assignment/login.html">Assignment</a>
+            <a href="assignment/#/login">Assignment</a>
         </li>
         <li>
             <a href="test/index.html">Test MongoDB</a>
