--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -7,6 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <!-- controllers -->
     <!--User Controllers-->
@@ -31,6 +33,7 @@
     <script src="services/website.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
+    <script src="directives/sortable.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
