--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -4,6 +4,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="style/style.css" rel="stylesheet"/>
     <link href="style/textAngular.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
@@ -32,12 +33,17 @@
     <script src="widget/controllers/widget-list.controller.client.js"></script>
     <script src="widget/controllers/widget-edit.controller.client.js"></script>
     <script src="widget/controllers/widget-new.controller.client.js"></script>
+    <script src="widget/controllers/widget-flickr-search.controller.client.js"></script>
+
 
     <!-- services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
+    <script src="services/widget.service.client.js"></script>
+    <script src="services/flickr.service.client.js"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
