fade effect added

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
 
                     <p class="light">
                         Designed and Developed a MEAN Stack  web application to find the nearest places that are popular in a certain location
-                        using FourSquare api.
+                        using FourSquare api. Click on the above icon for more details.
                     </p>
                 </div>
             </div></a>
