--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
             <a href="https://discoveryourplace.herokuapp.com/" class="black-text"> <div class="col s12 m4">
                 <div class="icon-block">
                     <h2 class="center brown-text"><i class="material-icons">room</i></h2>
-                    <h5 class="center">Discover Your City</h5>
+                    <h5 class="center">Web development Project</h5>
 
                     <p class="light">
                         Designed and Developed a MEAN Stack  web application to find the nearest places that are popular in a certain location
