--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                 <h4>About me</h4>
                 <p class="left-align">
                     I'm currently a graduate student pursuing my Masters in Computer Science at Northeastern
-                    University, Boston, USA. Key areas of expertise include : Data Analytics (R & Python) , Database Management(SQl, MongoDb),
+                    University, Boston, USA. Key areas of expertise include : Data Analytics (R & Python) , Database Management(SQL, MongoDb),
                     Web Development (MEAN Stack), Artificial Intellegence (NLP) and Software Engineering (C++, Java).
                 </p>       </div>
         </div>
